# not-sus-renamer

./: .gitignore  Cargo.toml  renamer.ts
datasets/: download.sh
src/: imdb.rs  magic.rs  main.rs  recursive_read_dir.rs  test.rs  types.rs
src/file_drive/: mod.rs  unix.rs  windows.rs
src/types/: entity.rs  episode.rs  metadata.rs  mod.rs  video.rs
