[package]
name = "not-sus-renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# webm-iterable: for writable tags
matroska = "0.15"
# mp4: for reading mp4 tags (maybe unnecessary if converting)
regex = "1.5"
lazy_static = "1.4"
format_num = "0.1"
